@@ -1,6 +1,8 @@
 -Xms2G
 -Xmx4G
 -XshowSettings:vm
+-XX:MaxPermSize=256m
 -XX:-TieredCompilation
 -XX:TieredStopAtLevel=1
+-XX:+CMSClassUnloadingEnabled
 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
